@@ -19,7 +19,7 @@ public:
 	~CAirLosTexture();
 
 public:
-	void Update() override;
+	void Update(bool forceCPU) override;
 	bool IsUpdateNeeded() override { return true; }
 
 private:
