@@ -10,9 +10,10 @@
 #include "Path.h"
 #include "Radar.h"
 
+#include "System/Config/ConfigHandler.h"
 #include "System/TimeProfiler.h"
 
-
+CONFIG(bool, ForceCPUInfotextureUpdate).safemodeValue(true).defaultValue(false).description("Use slower but more stable InfoTexture update method, may fix AMD crash.");
 
 CInfoTextureHandler::CInfoTextureHandler()
 : returnToLOS(false)
@@ -127,8 +128,9 @@ int2 CInfoTextureHandler::GetCurrentInfoTextureSize() const
 
 void CInfoTextureHandler::Update()
 {
+	bool forceCPU = configHandler->GetBool("ForceCPUInfotextureUpdate");
 	for (auto& p: infoTextures) {
 		if (p.second->IsUpdateNeeded())
-			p.second->Update();
+			p.second->Update(forceCPU);
 	}
 }
