@@ -123,9 +123,9 @@ void CLosTexture::UpdateCPU()
 }
 
 
-void CLosTexture::Update()
+void CLosTexture::Update(bool forceCPU)
 {
-	if (!fbo.IsValid() || !shader->IsValid() || uploadTex == 0)
+	if (forceCPU || !fbo.IsValid() || !shader->IsValid() || uploadTex == 0)
 		return UpdateCPU();
 
 	if (losHandler->globalLOS[gu->myAllyTeam]) {
