@@ -20,7 +20,7 @@ public:
 	~CRadarTexture();
 
 public:
-	void Update() override;
+	void Update(bool forceCPU) override;
 	bool IsUpdateNeeded() override { return true; }
 
 private:
